Changelog
=========

2.1a1 - unreleased
------------------

- Add bundle concept - a bundle is a string tag against a resource, which can
  be used to filter resources by theme. Each theme has a list of enabled
  bundles, managed on the 'Bundles' tab in the ZMI (note that this is global).
  [optilude]

- Fix handling of the purge attribute on import.
  [rossp]


2.0.7 (unreleased)
------------------

- Fixed ZMI screens to render for resources containing query strings in their
  ids, like found in the plone.session refresh support.
  [hannosch]


2.0.6 (2011-11-24)
------------------

- Fixed "AttributeError: 'FileResourceXX' object has no attribute 'POST'
  when displaying inline resources when using a POST request.
  Fixes http://dev.plone.org/ticket/8998
  [maurits]


2.0.5 - 2011-07-19
------------------

- Switched <link rel="kinetic-stylesheet" type="text/css" /> to <link
  rel="stylesheet" data-rel="kinetic-stylesheet" type="text/kss" /> to fix HTML5
  validation. References http://dev.plone.org/plone/ticket/11300
  [spliter]
  
- Add MANIFEST.in.
  [WouterVH]


2.0.4 - 2011-04-15
------------------

- Bugfix for #9849. Incomplete caching.
  [do3cc]


2.0.3 - 2011-03-02
------------------

- Support merging of resources that return IStreamIterators
  [optilude]


2.0.2 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]


2.0.1 - 2010-07-15
------------------

- Silence the `Nothing to import.` log messages.
  [hannosch]


2.0 - 2010-07-01
----------------

- Changed the registries moveResourceAfter and moveResourceBefore methods to
  gracefully handle missing destination ids. This is useful for GenericSetup
  upgrade steps to work even if the resources specified in "insert-after" or
  "insert-before" do not exist.
  [hannosch]


2.0b5 - 2010-06-13
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Adjusted tests to match new content-type for JavaScript in Zope 2.12.7+.
  [hannosch]

