@@ -10,8 +10,10 @@ class BaseRegistryTestCase(unittest.TestCase):
     # Make sure we don't generate an id that could screw up traversal to
     # the cached resource.
     def testGenerateId(self):
-        self.failIf('++' in self.registry.generateId('++resource++foobar.css'))
-        self.failIf('/' in self.registry.generateId('++resource++foo/bar.css'))
+        self.failIf('++' in self.registry.generateId(
+            Resource('++resource++foobar.css')))
+        self.failIf('/' in self.registry.generateId(
+            Resource('++resource++foo/bar.css')))
     
     #Resources with double //'s in them aren't traversable. The page templates
     # assume that no resource will have a '/' at the start or end, and won't
